--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name= "viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="First-P/css/style.css">
-    <link rel="shortcut icon" href="../image/icons8-flower-bouquet-64.png">
+    <link rel="shortcut icon" href="First-P/image/icons8-flower-bouquet-64.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abel&family=Dancing+Script:wght@400..700&family=Outfit:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">     
@@ -23,7 +23,7 @@
           <!--here the Upper part -->
                 <div class="header">
                     <div class="left">
-                             <img src="../image/icons8-bouquet-99 (2).png" >
+                             <img src="First-P/image/icons8-bouquet-99 (2).png" >
                              <h1>Flower street</h1>
                     </div>
                    
@@ -72,9 +72,9 @@
                             </nav> 
                             </div>
                            <div class="part2">
-                              <img src="../image/icons8-instagram-50 (1).png">
-                              <img src="../image/icons8-facebook-50 (1).png">
-                              <img src ="../image/icons8-youtube-50.png" >
+                              <img src="First-P/image/icons8-instagram-50 (1).png">
+                              <img src="First-P/image/icons8-facebook-50 (1).png">
+                              <img src ="First-P/image/icons8-youtube-50.png" >
                              
                            </div>
 
